...
    @State var errMsg = "Passwords don't match." //the err message in the registration popup
    
    @ViewBuilder
    var body: some View {
        //the successful alert
        let registrationSuccessfulAlert =
            Alert(title: Text("Note"), message: Text("Registration Successful."), dismissButton: .default(Text("Got it!")))
        //the login failure alert
        let incorrectAlert =
            Alert(title: Text("Error"), message: Text("Incorrect username or password"), dismissButton: .default(Text("Got it!")))
        //register button on the registration popup
        let popUpRegisterButton =
            Button("Register", action: register)
            .alert(isPresented: $showingSuccessAlert) {
                registrationSuccessfulAlert
            }
            .accessibilityIdentifier("FormRegister")
        //title
        let title =
            Text("Software Project Analytics")
            .font(.largeTitle)
            .fontWeight(.semibold)
            .padding(.top)
        
        //email input field
        let emailField =
            TextField("Email", text: $username)
            .frame(width: 400, height: 30, alignment: /*@START_MENU_TOKEN@*/.center/*@END_MENU_TOKEN@*/)
            .textFieldStyle(RoundedBorderTextFieldStyle()).accessibilityLabel("Username")
        
        //password input field
        let passwordField =
            SecureField("Password", text: $password)
            .padding(.top, 20.0)
            .frame(width: 400, height: 30, alignment: /*@START_MENU_TOKEN@*/.center/*@END_MENU_TOKEN@*/)
            .textFieldStyle(RoundedBorderTextFieldStyle()).accessibilityLabel("Password")
        
        //login button
        let loginButton =
            Button("Login", action: {
                //calls login() in the usermodel
                if !user.login(username, password, viewContext) {
                    showingAlert = true
                }
            })
            .font(.headline)
...
                password = ""
            })
            .font(.footnote)
            .foregroundColor(.gray)
            .frame(width: 100, height: 40)
            .cornerRadius(15.0)
            .accessibilityIdentifier("Clear")
        
        //the clear button that clears the registration form
        let formClearButton =
            Button("Clear", action: {
                email = ""
                registerPassword = ""
                confirmPassword = ""
                realname = ""
                number = ""
            })
            .foregroundColor(.red)
            .multilineTextAlignment(.center)
            .accessibilityIdentifier("FormClear")
        
        //the registration form on the popup
        let registrationForm =
            Form {
                Section(header: Text("UserInfo")) {
                    //Mandatory fields
                    HStack {
                        Text("Email").bold()
                        Spacer().frame(width: 30)
                        TextField("Email", text: $email)
                            .multilineTextAlignment(.trailing)
                            .accessibilityIdentifier("EmailField")
                    }
                    HStack {
                        Text("Password").bold()
                        Spacer().frame(width: 30)
                        SecureField("Password", text: $registerPassword)
                            .multilineTextAlignment(.trailing)
                            .accessibilityIdentifier("PasswordField")
                    }
                    HStack {
                        Text("Confirm Password").bold()
                        Spacer().frame(width: 30)
                        SecureField("Confirm Password", text: $confirmPassword)
                            .multilineTextAlignment(.trailing)
                            .accessibilityIdentifier("ConfirmPasswordField")
                    }
                    
                    //Optional fields
                    HStack {
                        Text("Actual Name").bold()
                        Spacer().frame(width: 30)
...
